CSS for header and hero

--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
 <body>
     
     <div class="headers">
-        <img class="logo-box" src="images/logo.png" alt="Racoon Logo" width="80px" height=auto>
+        <img src="images/logo.png" alt="Racoon Logo" width="80px" height=auto>
         <div class="links">
-            <a href="#"> link one </a>
-            <a href="#"> link two </a>
-            <a href="#"> link three </a>
+            <a href="#">Home</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
         </div>  
     </div>  
 
     <div class="first-container">
         <div class="text-together">
-            <p>MAIN TEXT</p>
-            <P>textttttttttttttttt ttttttt</P>
-            <p>button</p>
+            <p class="main-text">Racoons are amazing!</p>
+            <P class="secondary-text">Lorem ielit vitae nunc. Praesent sed efficitur tellus, id varius ipsum. Donec efficitur, lorem eu tristique dictum, leo ante tincidunt lectus, nec efficitur urna eros id dui. Quisque id semper quam, varius egestas nisi. Nullam ut orci sed ex gravida cursus nec a lorem.</P>
+            <a href="#" class="button">Sign up</a>
         </div>
         <img src="images/main.jpg" alt="Racoon Main" width="500px" height=auto>
     </div>
 
     <div class="second-container">
-        <p>MAIN TEXT 2</p>
+        <p class="information-header">Their four moods</p>
         <div class="boxes">
             <div class="box">
-                <img src="images/main.jpg" alt="Racoon Main" width="100px" height=auto>
-                <p>box text 1</p>
+                <img src="images/eat.jpg" alt="Racoon Eat" width="180px" height="180px">
+                <p>Eat</p>
             </div>
             <div class="box">
-                <img src="images/main.jpg" alt="Racoon Main" width="100px" height=auto>
-                <p>box text 2</p>
+                <img src="images/sleep.jpg" alt="Racoon Sleep" width="180px" height=180px>
+                <p>Sleep</p>
             </div>
             <div class="box">
-                <img src="images/main.jpg" alt="Racoon Main" width="100px" height=auto>
-                <p>box text 3</p>
+                <img src="images/wash.jpg" alt="Racoon Wash" width="180px" height=180px>
+                <p>Wash</p>
             </div>
             <div class="box">
-                <img src="images/main.jpg" alt="Racoon Main" width="100px" height=auto>
-                <p>box text 4</p>
+                <img src="images/angry.jpg" alt="Racoon Angry" width="180px" height=180px>
+                <p>Angry</p>
             </div>
         </div>
     </div>
