--- a/index.html
+++ b/index.html
@@ -50,20 +50,22 @@
     </div>
 
     <div class="third-container">
-        <p>blablablablablabla</p>
-        <p>by xD</p>
+        <p class="quote">Lorem ielit vitae nunc.  Quisque id semper quam, varius egestas nisi. Nullam ut orci sed ex gravida cursus nec a lorem.</p>
+        <p class="author">-Racoon, Random One</p>
     </div>
 
     <div class="fourth-container">
-        <div class="text-together">
-            <p>blablablablablabla</p>
-            <p>by xD</p>
+        <div class="color-container">
+            <div class="text-together">
+                <p class="main-text smaller-text">Call to action! It's time!</p>
+                <p class="secondary-text">Sign up to know more about racoons by clicking that button right over there!</p>
+            </div>
+            <a href="#" class="button border-white">Sign up</a>
         </div>
-        <p>button</p>
     </div>
 
     <div class="footer">
-        <p>Copyright  &#169;  The Odin Project 2021 </p>
+        <p class="secondary-text">Copyright  &#169;  The Odin Project 2021 </p>
     </div>
 
 </body>
